[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/EnemyView.gd" id="1"]

[node name="EnemyView" type="Control"]
layout_mode = 3
anchors_preset = 0
custom_minimum_size = Vector2(220, 140)
size_flags_horizontal = 3
mouse_filter = 0
script = ExtResource("1")

[node name="Sprite" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4

[node name="Info" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -8.0

[node name="NameLabel" type="Label" parent="Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemy"

[node name="HpLabel" type="Label" parent="Info"]
unique_name_in_owner = true
layout_mode = 2
text = "HP 0/0"

[node name="IntentLabel" type="Label" parent="Info"]
unique_name_in_owner = true
layout_mode = 2
text = "(Intent)"

[node name="Highlight" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 0, 0.25)
